@@ -1,3 +1,9 @@
+2011-01-13  John Dallaway  <john@dallaway.org.uk>
+
+	* src/stm32_misc.c: Implement a profiling timer on TIM2.
+	* cdl/hal_cortexm_stm32.cdl: Add CDL option to enable the profiling
+	timer.
+
 2011-01-13  Nick Garnett  <nickg@ecoscentric.com>
 
 	* src/stm32_misc.c (hal_start_clocks): Correct bit clear operation
@@ -108,7 +114,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 2008, 2009 Free Software Foundation, Inc.                        
+// Copyright (C) 2008, 2009, 2011 Free Software Foundation, Inc.                        
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
